bzr-svn 0.5.0					UNRELEASED

  BUG FIXES

   * Fixed too assertions that were always true. (#323305)

  FEATURES

   * Added basic implemention of "bzr check" on Subversion
     repositories.

bzr-svn 0.5.0~rc2				2009-01-30

  BUG FIXES

   * Install subvertpy as separate module rather than as part of 
     bzrlib.plugins.svn. (#306145)

   * Fix some tests when running overall bzr testsuite. (#306158)

   * Handle duplicate forward slashes in the path part of a URL. 

   * Pass utf-8 connect string to sqlite3() connect function. (#262923)

   * Fix pushing to repositories not allowing the setting of revision 
     properties.

   * Deal with newly appearing file ids correctly in dpush(). (#300979)

   * Fix handling of custom layouts, which used unicode internally. (#306629)

   * Fix pointless commits when using roundtripping using revision 
     properties. (#299943)

   * Make sure branches are properly removed in iter_all_changes(). 
     (#306288, #300006)

   * Handle pushing empty branches using dpush. (#311613)

   * Cope with unicode filenames in manual file id detection. (#311744)

   * Print proper error message when importing from non-svn repository in 
     svn-import. (#313817)

   * Support committing renames of filenames with non-ascii characters 
     in their name. (#312166)

   * Support strange rename during push. (#303563)

   * Print proper error when attempting to create repository in Subversion 
     working copy. (#310063)

   * Follow copied tags correctly. (#312272)

   * No longer includes subvertpy, but rather depends on external installation.

   * Properly determine file ids of children of directories that are replaced 
     by an older copy of themselves. (#316384)

   * Use unicode objects internally for sqlite. (#296868)

   * New implicit file id handling for copied directories.
    + Correctly handles implicit children when parent is copied from outside of the 
	  branch. (#304134)